syntax = "proto3";

option java_outer_classname = "SellerProto";
option java_package = "protofiles";

service SellerService{
  rpc login(LoginRequest) returns (RegisterResponse);
  rpc register(PayloadRequest) returns (RegisterResponse);
  rpc logout(LogoutRequest) returns (APIResponse);
  rpc getSellerRating(SellerRequest) returns (SellerRatingResponse);
  rpc itemSale(PayloadRequest) returns (APIResponse);
  rpc changePrice(PayloadRequest) returns (APIResponse);
  rpc removeItem(PayloadRequest) returns (APIResponse);
  rpc displayItems(SellerRequest) returns (ListResponse);
}

message LoginRequest{
  string payload = 1;
}

message APIResponse{
  int32 status = 1;
  string message = 2;
}

message RegisterResponse{
  int32 status = 1;
  string message = 2;
  string name = 3;
  int32 sellerId = 4;
}

message PayloadRequest{
  string payload = 1;
  int32 sellerId = 2;
}

message LogoutRequest{
  string username = 1;
  int32 sellerId = 2;
}

message SellerRequest{
  int32 sellerId = 1;
}

message SellerRatingResponse{
  int32 status = 1;
  string message = 2;
  int32 thumbsUp = 3;
  int32 thumbsDown = 4;
}

message ListResponse{
  int32 status = 1;
  string message = 2;
  string responsePayload = 3;
}